﻿##########################################
官方网站：https://www.pbootcms.com
标签手册：https://www.pbootcms.com/docs.html
版权所有：hnaoyun.com
##########################################

PbootCMS V1.2.3 build 2018-10-22
1、新增通过scode来调用单篇的接口；
2、优化会话创建机制,避免会话文件过多问题；
3、修复一些可能导致注入的安全问题(感谢topsec(zhan_ran)及CNVD的反馈)；
4、修复搜索结果无法按预期显示的的问题；
5、新增内容页、列表页404自动匹配的支持；

PbootCMS V1.2.2 build 2018-10-12
1、修复自定义表单多选类型提交数据错误问题；
2、修复发送邮件设置完成不立即生效问题；
3、修复发送测试邮件不能正确返回状态的问题；
4、修复分页代码数字条省略号不准问题；
5、修复后台编辑器的一些问题；
6、修复自定义标签的图片不自适应多级目录问题;
7、修复使用mysql数据库时可能导致的安全问题；
8、修复列表筛选与指定分类列表冲突问题；
9、修复多次调用内容标签导致重复计算访问量问题;
10、大幅提高Sqlite数据库数据写入速度；
11、优化后台登陆错误处理机制；
12、优化数据列表排序方式；
13、新增模板嵌套引用的支持；
14、新增在线更新涉及数据库时自动备份数据库；
15、新增在线更新分支选择功能；
16、新增对指定代码块不做标签解析的标签；
17、新增列表多条件排序自定义任意组合的支持,如:order='istop desc,id asc'
18、新增MySQL数据库事务的支持；
19、新增自定义标签多行文本类型；
20、新增文章定时发布的支持；
21、其它问题修复与优化。

PbootCMS V1.2.1 build 2018-09-12
1、新增在线升级新版本红点提示；
2、新增程序部署到非根目录时虚拟目录大小写不区分；
3、新增表单提交频率安全检测；
4、调整程序非伪静态时不再显示html后缀；
5、调整程序留言表单外的自定义表单不再要求验证码；
6、修复上版本首页分页不正常问题；
7、优化完善默认模板;

PbootCMS V1.2.0 build 2018-09-04
1、系统优化及安全修复；
2、修复API搜索与页面实现不统一；
3、优化后台内容页栏目显示逻辑；
4、新增后台轮播、链接页面批量排序；
5、升级layui到最新版本；
6、新增列表标签isico、ispics、istop、isrecommend、isheadline调节参数；
7、新增面包屑连接符separatoriconc及indexicon参数设置字体图标class；
8、优化分页条代码；
9、新增内容截取时自动添加省略号；
10、基于bootstrap v4的全新默认模板正式上线；
11、修复在线更新浏览器兼容性问题；

PbootCMS V1.1.9 build 2018-08-17
1、系统优化及安全修复(重要)；
2、修复自定义表单Mysql时添加失败问题；
3、修复后台模板一些小错误；
4、修复影响缓存效果的一些问题；
5、新增后台在线更新功能；
6、新增附件大小标签；

PbootCMS V1.1.8 build 2018-08-07
1、修复提交表单多选字段接收数据问题；
2、修复登陆过程中二次登陆在页面不刷新时验证失败问题；
3、新增搜索结果fuzzy参数来控制是否模糊匹配；
4、新增父分类、顶级分类名称及链接独立标签，具体见手册；
5、新增内容多图拖动排序功能；

PbootCMS V1.1.7 build 2018-08-01
1、修复测试邮件不发送到填写的测试邮箱问题；
2、修复友情链接添加时排序报错问题；
3、修复API幻灯片及友情链接排序无效；
4、修复站内Ajax调用API数据时间戳过期问题；
5、新增自定义标签开关类型；
6、新增自定义表单数据调取标签；
7、新增单页设置跳转后内容不再出现管理列表中；
8、新增搜索支持多字段同时匹配；
9、新增点击上传的图片自动添加到编辑器；
10、优化表单提交验证；
11、其它问题修复与优化；

PbootCMS V1.1.6 build 2018-07-21
1、优化编辑器配置及安全加固;
2、优化内容管理列表布局；
3、增强系统后台及标签解析引擎安全性；
4、调整runtime标签展示方式；
5、新增Gzip页面压缩功能及后台开关；
6、新增支持根目录定义404.html匹配错误URL访问；