@@ -1,16 +1,16 @@
 <!-- 分类导航 -->
 <div class="my-3">
     {pboot:if('{sort:scode}'=='{sort:tcode}')}
-		<a href="{sort:toplink}" class="btn btn-info">全部</a>
+		<a href="{sort:toplink}" class="btn btn-info">全部 <span class="badge badge-light">{sort:toprows}</span></a>
     {else}
-        <a href="{sort:toplink}" class="btn btn-light">全部</a>
+        <a href="{sort:toplink}" class="btn btn-light">全部 <span class="badge btn-info">{sort:toprows}</span></a>
     {/pboot:if}
 
    	{pboot:nav num=10 parent={sort:tcode}}
      	{pboot:if('[nav:scode]'=='{sort:scode}')}
-     		<a href="[nav:link]" class="btn btn-info">[nav:name]</a>
+     		<a href="[nav:link]" class="btn btn-info">[nav:name] <span class="badge badge-light">[nav:rows]</span></a>
          {else}
-         	<a href="[nav:link]" class="btn btn-light">[nav:name]</a>
+         	<a href="[nav:link]" class="btn btn-light">[nav:name] <span class="badge btn-info">[nav:rows]</span></a>
          {/pboot:if}
     {/pboot:nav}
 </div>
