@@ -4,12 +4,16 @@
 版权所有：hnaoyun.com
 ##########################################
 
-PbootCMS V1.2.3 build 2018-10-22
+PbootCMS V1.2.3 build 2018-10-28
 1、新增通过scode来调用单篇的接口；
 2、优化会话创建机制,避免会话文件过多问题；
 3、修复一些可能导致注入的安全问题(感谢topsec(zhan_ran)及CNVD的反馈)；
 4、修复搜索结果无法按预期显示的的问题；
 5、新增内容页、列表页404自动匹配的支持；
+6、新增[sort:rows]输出该栏目下内容数量；
+7、新增[nav:rows]输出该菜单下内容数量；
+8、新增{sort:toprows}输出顶级栏目下内容数量；
+9、新增{sort:parentrows}输出父栏目下内容数量；
 
 PbootCMS V1.2.2 build 2018-10-12
 1、修复自定义表单多选类型提交数据错误问题；
